k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estudiante
  namespace: thymeleaf
spec:
  selector:
    matchLabels:
      app: estudiante
  replicas: 1
  template:
    metadata:
      labels:
         app: estudiante
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: estudiante
           image: localhost:5000/estudiante:latest
           ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: estudiante
  namespace: thymeleaf
spec:
  selector:
    app: estudiante
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
